# bitvm2-node

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  start.sh
covenant/: .env.aggregation  .env.continuous  .env.template  Cargo.toml  Dockerfile.aggregation  Dockerfile.continuous  README.md  docker-compose.yml
covenant/aggregation/: .env.example  .env.template  Cargo.toml  build.rs
covenant/aggregation/src/: cli.rs  db.rs  executor.rs  lib.rs  main.rs
covenant/continuous/: .env.example  Cargo.toml
covenant/continuous/src/: cli.rs  db.rs  main.rs
covenant/groth16/: Cargo.toml  build.rs
covenant/groth16/src/: db.rs  lib.rs  test.rs
covenant/guest/: Cargo.toml
covenant/guest-aggregation/: Cargo.toml
covenant/guest-aggregation/src/: io.rs  main.rs
covenant/guest-groth16/: Cargo.toml
covenant/guest-groth16/src/: main.rs
covenant/guest/src/: main.rs
covenant/host/: Cargo.toml
covenant/host/src/: bitvm2_node.rs  cli.rs  main.rs
crates/bitvm2/: Cargo.toml
crates/bitvm2/src/: actors.rs  keys.rs  lib.rs  pegin.rs  types.rs
crates/bitvm2/tests/: e2e.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  esplora.rs  lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  musig2.rs
crates/spv/: Cargo.toml
crates/spv/src/: header_chain.rs  lib.rs  merkle_tree.rs  mmr.rs  transaction.rs  utils.rs
crates/store/: Cargo.toml
crates/store/.sqlx/: query-003a4bd03ccde73721be59cc1428c3e418b739f707b10a1f3f2a359f1a20e5a0.json  query-004879c35dfa1a31ab12b8e8d2cbe6652852e4ccb0a8b7e55bc46c0c796c60e8.json  query-047bd743e597d1c7017aba3a17e66c240b78bcb3b5253e1769206b1cc3a9ddd7.json  query-0614e6466d9d04b4b76d3ce2b4bbaad3ae674f5a0f6264f745e7ba19b536fb4f.json  query-0642b6f4df6a7789493a0a684b81a314b2d502eee56694ed604bdf1fdd266d39.json  query-06a1a7806bf5c8eea68a0ef94c17cc9d7f59c5719cfcec73c710532278d88389.json  query-06aa84316608d57b2779541c188e6b680e2978c0e3647dfef98cc12167098182.json  query-06d1accdb528ed892f82f5241ead9ac231495869e6649caed2ff4d4767bbf7d0.json  query-07697346f96efa1a98e7fe8d2ba3785be1d797685e60d6b70e2a31a27c7c3d5f.json  query-09676becb096a999c9ea72dfd9dbe827ae36ba78ba806e2886b8683d6ff4efc0.json  query-09ed375fb80b741c07ecf312e84de317aa19d883cd287e6c3ff5ba849d2c25c0.json  query-0c9ce584d5e8f5e990c329eadb711dae05c91f5aedd5cf53b32f4fbb1a965b4f.json  query-0cacadee9a37b5d992e7cb818e3b700acc21d7336808916b4941eb1685687a57.json  query-0d023eece6a48288b51122e990f5fe1f4c54b9bdc352481000722f7c857f30ee.json  query-0d85630e9b247904707d9f937d45fd0aebef5ebbd98113aff93c0ec1dc5019f9.json  query-0f2b70b979121b30155be45e74d286edabe842fbdbd306a4f6a8f194474c098a.json  query-0faaff39dcad757c8f93c7d39fa3dec4f0da2ae428cb499e81ee390d59eb76ee.json  query-10ecfb05c6e53066be258f82fa31f8ae73205445a9ae34a065a5b4681081d779.json  query-11f09d32b8bb3272dcb9116269da9d0c142f470a4da5e4282d5907df48e14353.json  query-12a27823bafa55370dc731e2d1cea87971197750348ee5b6a5804336f1ef1a3d.json  query-13b1852a7ce8722ba96bcbc9bb7d2f85db0ce3567ef9b854fb3133446438d271.json  query-17a3146e3574ce83748209648317609adfd9057cebd195f7ae5c7234b295c72e.json  query-1895c0937fc0013a310e3e928ff3e39f1db4e74bb34fc50896a84462e326b8a4.json  query-190e5a87d3763abf734ce88e93c09242355753dc9cb168ff1324038eaebfe768.json  query-196e65fa2f092c80b2bffcda04028b400333487e6a61dbd59b21322d709526e6.json  query-19f1b468ff26d263271ca9657a5a00b1f0d735955f8e112e20a4b4bcb247d938.json  query-1b26187de83c6e7c1ea8ab2fe6a12b09e81876d6b25656925d2686192c1ccdf2.json  query-1ba0b78400c3eedaff1be73f6d476b39ef6abcaaba2a7a5a27520725e45b684a.json  query-1c1ae4d014bcb4ac6e5f81bcdad4347910b96be348d8ed83805d547883c23b61.json  query-1c6c2db88e7624ea64fbd5cf42f7ca4479a46206472c81aa14037d5c53ab8a20.json  query-1f425bff7dce6a4d07fe0da12c399ee69d14e465284f5bde3246e92fe08dfc63.json  query-2299ee5ad27a7875f66f88916d94a54f548d1e5ec8a91a4046cb866d4c1d626e.json  query-233cf97d7d35e1172d6f841a87df15c809ae76e28c7c9cd2d100c9126d4c55c5.json  query-23d9febaeaf6acb396a14bdbc88a445a0c1a1e223f5928854480d3e8362c9693.json  query-260c404371307e5fa73411e1b57a3b7b5f5c6624648fbdbb1e77135211806ee6.json  query-270c44d6c8e057cd476099b4b186037282715f0368ead98c89c28ff97840b9d7.json  query-29204f0373a09260469e727a7eecbfc875b319b532ef53e153a6f00adf895690.json  query-29acff50d4b895f93286472dca21af4ccd27611bbaf9ee4d2728519377c0fff0.json  query-29f4f1e7358eddc55b22c2e00946c876e717011f2ed5c67e6872f07dd86938e7.json  query-2a360c2524c0cc6abde9f27e3783d20801b88bd35d99738637446a942191ccbe.json  (+206 more)
crates/store/migrations/: 20250408024406_create_instance_table.sql  20250408024416_create_graph_table.sql  20250408024422_create_node_table.sql  20250414054711_create_message_table.sql  20250425012051_create_nonce_collect.sql  20250425012105_create_pubkey_collect.sql  20250425012245_create_message_broadcast.sql  20250512021401_create_proof_with_pis.sql  20250514014144_alter_graph.sql  20250514072701_create_proof.sql  20250514084105_create_block_proof.sql  20250519092928_create_contract.sql  20250522064648_alter_graph_add_init_withdraw_txid.sql  20250522070540_create_watch_contract.sql  20250604055421_create_aggregation_proof.sql  20250604055717_create_verifier_key.sql  20250604065524_alter_block_proof.sql  20250605015645_create_goat_tx_record.sql  20250607155521_alter_goat_tx_record.sql  20250607163801_alter_proof_with_pis.sql  20250610074538_alter_node.sql  20250611022930_create_groth16_proof.sql  20250612010949_alter_block_proof.sql.sql  20250612010957_alter_aggregation_proof.sql.sql  20250613025444_alter_graph_add_zkm_version.sql  20250613081521_alter_block_proof.sql  20250613081528_alter_aggregation_proof.sql  20250613081534_alter_groth16_proof.sql  20250616115538_alter_node_add_reward.sql  20250715090225_create_proof_config.sql  20250810113519_set_auto_vacuum.sql  (+19 more)
node/: Cargo.toml  README.md  graph_status.md
node/docs/: API.md
node/src/: action.rs  env.rs  lib.rs  main.rs  metrics_service.rs  p2p_msg_handler.rs  relayer_action.rs  tests.rs  utils.rs
node/tests_data/: test_bitvm2_graph.json  test_proof_v1.1.0.json
(+74 files in other folders)
