[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/bitvm2",
    "crates/store", "crates/identity", "node", "crates/spv",
]
default-members = ["node"]

[workspace.dependencies]
bitvm = { git = "https://github.com/KSlashh/BitVM.git", branch = "goat-v1.2-fix" }
goat = { git = "https://github.com/KSlashh/BitVM.git", branch = "goat-v1.2-fix" }

libp2p = { version = "0.55.0", features = ["tokio", "dns", "kad", "noise", "tcp", "yamux", "rsa", "ping", "mdns"] }
libp2p-swarm-derive = "0.35.0"
libp2p-metrics = "0.16.0"
libp2p-core = "0.43.0"
prometheus-client = "0.22.3"
once_cell = "1.5"
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin = { version = "0.32.6", features = ["rand-std"] }
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client" }
serde_json = "1.0.116"
rand = "0.8.5"
dotenv = "0.15.0"
blake3 = "=1.5.1"
musig2 = { version = "0.1.0", features = ["serde", "rand"] }
futures = "0.3.30"
async-trait = "0.1.81"
alloy = { version = "1.0.9", features = ["full"] }
clap = { version = "4.5.23", features = ["derive", "cargo", "env"] }
serial_test = "*"
secp256k1 = { version = "0.29.1", features = ["global-context"] }

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"

axum = "0.8.1"
http = "1.3.1"
uuid = { version = "1.7", features = ["v4", "serde"] }
zeroize = "1.8.1"

bincode = "1.3.3"
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-core-executor = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-prover = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS" }
zkm-verifier = { git = "https://github.com/zkMIPS/zkMIPS", features = ["ark"] }

bitvm2-lib = { path = "crates/bitvm2" }
identity = { path = "crates/identity" }
store = { path = "crates/store" }
spv = { path = "crates/spv" }