[workspace]
members = [
    "continuous",
    "aggregation",
    "groth16",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
anyhow = "1.0.98"
bincode = "1.3.3"
chrono = "0.4.39"
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex = "0.4.3"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"
logroller = { version = "0.1", features = ["tracing"] }

# workspace
guest-executor = { git = "https://github.com/ProjectZKM/reth-processor" }
host-executor  = { git = "https://github.com/ProjectZKM/reth-processor", features = ["alerting"] }
primitives     = { git = "https://github.com/ProjectZKM/reth-processor" }
provider       = { git = "https://github.com/ProjectZKM/reth-processor" }

# guest-executor = { path = "../../reth-processor/crates/executor/guest" }
# host-executor = { path = "../../reth-processor/crates/executor/host", features = ["alerting"] }
# primitives = { path = "../../reth-processor/crates/primitives" }
# provider= { path = "../../reth-processor/crates/provider" }

# Ziren
zkm-build = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-core-executor = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-prover = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren" }
zkm-verifier = { git = "https://github.com/ProjectZKM/Ziren", features = ["ark"] }

# zkm-build = { path = "../zkMIPS/crates/build" }
# zkm-core-executor = { path = "../zkMIPS/crates/core/executor" }
# zkm-prover = { path = "../zkMIPS/crates/prover" }
# zkm-sdk = { path = "../zkMIPS/crates/sdk" }

# reth
reth-primitives-traits = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-evm = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-evm-ethereum = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-optimism-evm = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-optimism-primitives = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-storage-errors = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-trie = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-chainspec = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-execution-types = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-errors = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false, features = ["serde"] }
reth-optimism-consensus = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }
reth-optimism-forks = { git = "https://github.com/ziren-patches/reth", branch = "patch-1.3.10", default-features = false }

# revm
revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", features = [
    "serde",
    "kzg-rs",
    "bn",
], default-features = false }
revm-bytecode = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
revm-state = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
revm-primitives = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", features = [
    "serde",
], default-features = false }
revm-interpreter = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
revm-precompile = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
revm-database-interface = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
op-revm = { git = "https://github.com/ziren-patches/revm", branch = "patch-22.0.0", default-features = false }
revm-inspectors = { git = "https://github.com/ziren-patches/revm-inspectors", branch = "patch-0.19.0" }

# alloy
alloy-rlp = "0.3.10"
alloy-trie = "0.8.1"
alloy-chains = { version = "0.2.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = ["sha3-keccak", "map-foldhash"] }
alloy-evm = { git = "https://github.com/ziren-patches/evm", branch = "patch-0.4.0", default-features = false }
alloy-provider = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false, features = [
    "eth",
] }
alloy-json-rpc = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }
alloy-genesis = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }
alloy-consensus = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }
alloy-transport = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }
alloy-transport-http = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0" }
alloy-rpc-client = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }
alloy-eips = { git = "https://github.com/ziren-patches/alloy", branch = "patch-0.14.0", default-features = false }

# op
alloy-op-evm = { git = "https://github.com/ziren-patches/evm", branch = "patch-0.4.0", default-features = false }
op-alloy-consensus = { git = "https://github.com/ziren-patches/op-alloy", branch = "patch-0.13.0" }
op-alloy-network = { git = "https://github.com/ziren-patches/op-alloy", branch = "patch-0.13.0" }
op-alloy-rpc-types = { git = "https://github.com/ziren-patches/op-alloy", branch = "patch-0.13.0" }


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/ziren-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8", package = "sha2" }
bn = { git = "https://github.com/ziren-patches/bn", branch = "patch-0.6.0", package = "substrate-bn" }
k256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-k256-0.13.4" }
p256 = { git = "https://github.com/ziren-patches/elliptic-curves", branch = "patch-p256-0.13.2" }
alloy-primitives-v1-0-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.0.0" }
alloy-primitives-v1-1-0 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.0" }
alloy-primitives-v1-1-2 = { git = "https://github.com/ziren-patches/core.git", package = "alloy-primitives", branch = "patch-alloy-primitives-1.1.2" }
