[package]
name = "bitvm2-noded"
version.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "autonat",
    "dns",
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "identify",
    "kad",
    "ping",
    "relay",
    "metrics",
    "rsa",
    "macros",
    "gossipsub",
    "quic",
    "websocket",
] }
libp2p-swarm-derive = { workspace = true }
libp2p-metrics = { workspace = true }
libp2p-core = { workspace = true }
futures = { workspace = true }

bitvm2-lib = { workspace = true }
identity = { workspace = true }
store = { workspace = true }

clap = { workspace = true }
zeroize = { workspace = true }
axum = { workspace = true, features = ["macros", "json"]}
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"]}


opentelemetry = { version = "0.27.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.27.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio", "metrics"] }
prometheus-client = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust-embed = { version = "8.4.0", features = ["include-exclude", "interpolate-folder-path"] }
http = "1.3.1"
rand = "0.8.5"
tower-http = {  version = "0.6.2", features = ["cors"]  }
mime_guess = "2.0.5"
base64 = "0.22.1"
anyhow = { workspace = true }
musig2 = { version = "0.1.0", features = ["serde", "rand"] }

[dev-dependencies]
