[package]
name = "aggregation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
serde.workspace = true
tokio.workspace = true
url.workspace = true
tracing.workspace = true
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
eyre = "0.6.12"
futures-util = "0.3.31"
tracing-subscriber = "0.3.18"

# workspace
provider.workspace = true

# zkMIPS
zkm-sdk.workspace = true
zkm-prover.workspace = true

store = { path = "../../crates/store" }

[build-dependencies]
zkm-build.workspace = true
