[package]
name = "aggregation"
version.workspace = true
edition.workspace = true

[dependencies]
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
anyhow.workspace = true
bincode.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
logroller.workspace = true
hex.workspace = true
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
sha2 = "0.10.8"

# Ziren
zkm-sdk.workspace = true
zkm-prover.workspace = true
zkm-verifier.workspace = true

store = { path = "../../crates/store" }

[build-dependencies]
zkm-build.workspace = true

[features]
common_prover = []
