[package]
name = "groth16"
version.workspace = true
edition.workspace = true

[dependencies]
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
anyhow.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true

# zkMIPS
zkm-sdk.workspace = true
zkm-prover.workspace = true
zkm-verifier.workspace = true

store = { path = "../../crates/store" }

[dev-dependencies]
tracing-subscriber = "0.3.18"

[build-dependencies]
zkm-build.workspace = true
