[workspace]
[package]
name = "guest-aggregation"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
revm-primitives = { git = "https://github.com/zkMIPS-patches/revm", branch = "patch-22.0.0-goat", features = [
    "serde",
], default-features = false }
sha2 = { git = "https://github.com/zkMIPS-patches/RustCrypto-hashes", branch = "patch-sha2-0.10.8", package = "sha2" }
zkm-zkvm = { git = "https://github.com/zkMIPS/zkMIPS", package = "zkm-zkvm", features = ["verify"] }
