[package]
name = "covenant-host"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.7", features = ["derive", "env"] }
tokio.workspace = true
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
eyre = "0.6.12"

tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }
reqwest-retry = "0.6.1"
base64 = "0.22.1"
time = "0.3.37"
futures = "0.3"

# workspace
host-executor.workspace = true
primitives.workspace = true
provider.workspace = true

# alloy
alloy-chains.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true

url.workspace = true

# zkMIPS
zkm-sdk.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-network.workspace = true
guest-executor.workspace = true
serde_json = "1.0"
thousands = "0.2.0"
madato = "0.7.0"
serde.workspace = true
reth-primitives-traits.workspace = true

[build-dependencies]
zkm-build.workspace = true