[package]
name = "bitvm2-lib"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
goat = { workspace = true }
bitvm = { workspace = true }
serde = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true }
musig2 = { workspace = true }
secp256k1 = { workspace = true }
bitcoin-script = { workspace = true }
anyhow = { workspace = true }

