[package]
name = "bitvm2-lib"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
goat = { workspace = true }
bitvm = { workspace = true }
serde = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
musig2 = { workspace = true }
secp256k1 = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
bitcoin-script = { workspace = true }

serde_json = { workspace = true }
bincode = "1.3.3"
uuid = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
