[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
dotenv = { workspace = true }
alloy = { workspace = true }
bitcoin = { workspace = true }
esplora-client = { workspace = true }
anyhow = { workspace = true }

