[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
alloy = { workspace = true }
uuid = { workspace = true }
bitcoin = { workspace = true }
esplora-client = { workspace = true }
anyhow = { workspace = true }
store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
goat = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }


[dev-dependencies]
tempfile = "3.19.1"
