[package]
name = "identity"
version.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
tracing-subscriber = { workspace = true }
libp2p = { workspace = true, features = ["identify"] }
musig2 = { workspace = true, features = ["k256"] }
secp256k1 = { workspace = true }
rand = { workspace = true }
