[package]
name = "spv"
version.workspace = true
edition.workspace = true
#resolver.workspace = true

[dependencies]
borsh = {version = "1.5.3", features = ["derive"] }
sha2 =  { version = "0.10.8", default-features = false }
bitcoin = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex-literal = "1.0.0"