[package]
name = "store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = {  version = "0.8.3", features = [ "sqlite", "runtime-tokio", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = "0.1.41"

futures = { workspace = true }
futures-util = "0.3"
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12.15", features = ["multipart", "json", "stream"]}
serde_json = { workspace = true }
walkdir = "2"
tokio-util = "0.7.14"
